crates/wit-clap/tests/snapshots/snapshots__resources_are_rejected.snap
---
source: crates/wit-clap/tests/snapshots.rs
expression: "format!(\"rejected: resource `{name}`\")"
---
rejected: resource `<anonymous>`
